# study-focus-system

./: .gitignore  IMPLEMENTATION_LOG.md  PROJECT_PLAN.md
backend/: .env.example  DEPLOYMENT.md  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  dicts.py  feedback.py  focus_sessions.py  leaderboards.py  learning.py  points.py  redeem_orders.py  router.py  users.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: base.py  session.py
backend/app/schemas/: auth.py  dicts.py  feedback.py  focus.py  leaderboard.py  learning.py  points.py  redeem.py  user.py
backend/app/services/: ai_service.py  auth_service.py  daily_question_service.py  dict_service.py  feedback_service.py  focus_service.py  leaderboard_service.py  point_service.py  redeem_service.py  user_service.py
backend/deploy/nginx/: study-focus.conf
backend/deploy/systemd/: study-focus-api.service
backend/scripts/: init_db.ps1  seed_demo.ps1  seed_leaderboard_demo.ps1  smoke_ai_chat.py  smoke_ai_chat2.py  smoke_focus_resume.py  smoke_focus_resume2.py  smoke_full_flow.py  smoke_user_auth.py
backend/test/: YX-test.py
backend/tests/: test_ai_service.py  test_api_middleware.py  test_api_workflow_unittest.py  test_code_xxf1  test_code_xxf1.py  test_conversation_service.py  test_daily_question_service.py  test_feedback_service.py  test_focus_service.py  test_leaderboard_service.py  test_redeem_service.py  test_resume_repository.py  test_service_rules_unittest_YYN.py  test_user_service.py
db/: schema.sql  (+5 more)
(+27 files in other folders)
